[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/Victory/Victory panel Preset.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/Victory/Star.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/BTN SETTINGS_EMPTY.png" type="Texture" id=4]
[ext_resource path="res://scripts/Victory.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/neodgm_pro.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[node name="Victory" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.576471 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -91.5
margin_right = 108.0
margin_bottom = 91.5
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star" type="TextureRect" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 38.0
margin_right = 29.0
margin_bottom = 92.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star2" type="TextureRect" parent="TextureRect"]
margin_left = 23.944
margin_top = 50.4829
margin_right = 81.944
margin_bottom = 104.483
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star3" type="TextureRect" parent="TextureRect"]
margin_left = 145.416
margin_top = 50.4498
margin_right = 203.416
margin_bottom = 104.45
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="TextureRect"]
margin_left = 88.0
margin_top = 108.0
margin_right = 153.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "32132"
align = 1
valign = 1

[node name="HomeButton" type="TextureButton" parent="TextureRect"]
margin_left = 17.4617
margin_top = 137.806
margin_right = 127.462
margin_bottom = 177.806
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect/HomeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.901961, 0.662745, 0.0941176, 1 )
text = "HOME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="TextureRect"]
margin_left = 122.462
margin_top = 137.806
margin_right = 232.462
margin_bottom = 177.806
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.901961, 0.662745, 0.0941176, 1 )
text = "NEXT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="TextureRect/NextButton" to="." method="_on_NextButton_pressed"]
